--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,7 +6,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -37,7 +36,6 @@ set_real_ip_from 104.244.77.79;
 set_real_ip_from 104.244.77.80;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.233;
-set_real_ip_from 104.244.79.178;
 set_real_ip_from 104.244.79.44;
 set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
@@ -112,6 +110,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
@@ -195,7 +194,6 @@ set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.255.215;
 set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
-set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -813,6 +811,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:634:2177::1;
@@ -918,7 +917,6 @@ set_real_ip_from 23.137.249.8;
 set_real_ip_from 23.137.250.34;
 set_real_ip_from 23.137.251.61;
 set_real_ip_from 23.137.251.62;
-set_real_ip_from 23.152.24.77;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
@@ -1531,6 +1529,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
+set_real_ip_from 44.219.109.112;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1635,7 +1634,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1664,7 +1662,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.211.37.219;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1782,6 +1779,7 @@ set_real_ip_from 91.208.197.144;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
 set_real_ip_from 91.208.75.178;
+set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
@@ -1805,7 +1803,6 @@ set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.230.54;
-set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.18;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.140.115.63;
