--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,7 +6,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -685,7 +684,6 @@ set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
-set_real_ip_from 198.98.60.90;
 set_real_ip_from 199.195.249.214;
 set_real_ip_from 199.195.250.165;
 set_real_ip_from 199.195.251.119;
@@ -994,7 +992,6 @@ set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
-set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
@@ -1155,6 +1152,7 @@ set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
+set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c206:2095:2624::1;
@@ -1516,6 +1514,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 3.233.120.156;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.188.156;
@@ -1525,7 +1524,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
-set_real_ip_from 44.194.238.185;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
