--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -51,6 +52,7 @@ set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.11.166;
 set_real_ip_from 107.189.1.160;
+set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.11.80;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.13.180;
@@ -192,6 +194,7 @@ set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.255.215;
 set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -861,7 +864,7 @@ set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 217.160.88.146;
 set_real_ip_from 217.27.189.205;
-set_real_ip_from 217.95.27.82;
+set_real_ip_from 217.95.28.15;
 set_real_ip_from 23.129.64.130;
 set_real_ip_from 23.129.64.131;
 set_real_ip_from 23.129.64.132;
@@ -1053,6 +1056,7 @@ set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7ca::2;
+set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -1514,7 +1518,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 3.233.120.156;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.188.156;
@@ -1657,6 +1660,7 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 54.175.99.1;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1711,6 +1715,7 @@ set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
+set_real_ip_from 82.153.138.182;
 set_real_ip_from 82.153.138.48;
 set_real_ip_from 82.153.138.79;
 set_real_ip_from 82.197.182.161;
@@ -1825,4 +1830,5 @@ set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.211.7.148;
 set_real_ip_from 96.27.198.133;
+set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
