--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,7 +6,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -113,6 +112,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
@@ -811,6 +811,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:634:2177::1;
@@ -842,7 +843,6 @@ set_real_ip_from 208.109.36.224;
 set_real_ip_from 209.141.40.44;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.50.178;
-set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
@@ -857,7 +857,6 @@ set_real_ip_from 213.232.235.83;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
-set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.215.167;
 set_real_ip_from 217.12.221.131;
@@ -1003,7 +1002,6 @@ set_real_ip_from 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 set_real_ip_from 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 set_real_ip_from 2605:6400:10:fa4:9e93:1da8:f7af:2e65;
 set_real_ip_from 2605:6400:20:104e::2;
-set_real_ip_from 2605:6400:20:170c::1;
 set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -1527,6 +1525,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
+set_real_ip_from 44.221.207.198;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1582,6 +1581,7 @@ set_real_ip_from 45.9.148.219;
 set_real_ip_from 45.9.150.103;
 set_real_ip_from 45.9.150.130;
 set_real_ip_from 45.92.1.74;
+set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.95.169.184;
 set_real_ip_from 45.95.169.223;
 set_real_ip_from 45.95.169.224;
@@ -1660,7 +1660,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.175.99.1;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1729,6 +1728,7 @@ set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
+set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.247.165.52;
@@ -1825,6 +1825,7 @@ set_real_ip_from 95.111.238.0;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
+set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
