--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -201,6 +202,7 @@ allow 176.58.121.177;
 allow 178.162.201.165;
 allow 178.170.37.11;
 allow 178.17.170.184;
+allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -215,7 +217,7 @@ allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.237.23;
 allow 178.236.247.122;
-allow 178.31.159.152;
+allow 178.31.62.191;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -229,6 +231,7 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.206.51.194;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -497,7 +500,6 @@ allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
 allow 185.233.100.23;
-allow 185.234.131.80;
 allow 185.235.146.29;
 allow 185.239.71.160;
 allow 185.241.208.115;
@@ -545,6 +547,7 @@ allow 185.70.8.45;
 allow 185.70.8.46;
 allow 185.7.33.146;
 allow 185.82.219.109;
+allow 185.84.224.84;
 allow 185.84.31.254;
 allow 185.86.148.90;
 allow 188.165.200.97;
@@ -858,7 +861,6 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.136.84.104;
-allow 213.232.235.83;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -1140,6 +1142,7 @@ allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
@@ -1256,6 +1259,7 @@ allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
+allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
@@ -1501,7 +1505,6 @@ allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:4462::2;
-allow 2a12:5940:463b::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:53f7::2;
 allow 2a12:5940:7515::2;
@@ -1517,6 +1520,7 @@ allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
+allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 35.0.127.52;
@@ -1529,7 +1533,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
-allow 44.218.105.47;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1599,7 +1602,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
-allow 46.226.161.151;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1803,7 +1805,6 @@ allow 93.99.104.128;
 allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.102.51.15;
-allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.112.22;
@@ -1813,7 +1814,6 @@ allow 94.16.121.91;
 allow 94.177.106.37;
 allow 94.177.106.46;
 allow 94.177.106.55;
-allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
