--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -301,6 +301,7 @@ deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
+deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
@@ -417,6 +418,7 @@ deny 2a05:26c0:d1:12:acdc:feed:beef:66;
 deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
+deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
@@ -662,7 +664,6 @@ deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:4462::2;
-deny 2a12:5940:463b::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:53f7::2;
 deny 2a12:5940:7515::2;
