--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -201,6 +202,7 @@ set_real_ip_from 176.58.121.177;
 set_real_ip_from 178.162.201.165;
 set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.184;
+set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
@@ -215,7 +217,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.237.23;
 set_real_ip_from 178.236.247.122;
-set_real_ip_from 178.31.159.152;
+set_real_ip_from 178.31.62.191;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -229,6 +231,7 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.206.51.194;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
@@ -497,7 +500,6 @@ set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.233.100.23;
-set_real_ip_from 185.234.131.80;
 set_real_ip_from 185.235.146.29;
 set_real_ip_from 185.239.71.160;
 set_real_ip_from 185.241.208.115;
@@ -545,6 +547,7 @@ set_real_ip_from 185.70.8.45;
 set_real_ip_from 185.70.8.46;
 set_real_ip_from 185.7.33.146;
 set_real_ip_from 185.82.219.109;
+set_real_ip_from 185.84.224.84;
 set_real_ip_from 185.84.31.254;
 set_real_ip_from 185.86.148.90;
 set_real_ip_from 188.165.200.97;
@@ -858,7 +861,6 @@ set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.136.84.104;
-set_real_ip_from 213.232.235.83;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
@@ -1140,6 +1142,7 @@ set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
+set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::d735;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
@@ -1256,6 +1259,7 @@ set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:66;
 set_real_ip_from 2a05:26c0:d1:12:acdc:feed:beef:99;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
+set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
@@ -1501,7 +1505,6 @@ set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:144f::2;
 set_real_ip_from 2a12:5940:4462::2;
-set_real_ip_from 2a12:5940:463b::2;
 set_real_ip_from 2a12:5940:52c2::2;
 set_real_ip_from 2a12:5940:53f7::2;
 set_real_ip_from 2a12:5940:7515::2;
@@ -1517,6 +1520,7 @@ set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
+set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 35.0.127.52;
@@ -1529,7 +1533,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.218.105.47;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1599,7 +1602,6 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.166.139.111;
 set_real_ip_from 46.182.21.248;
-set_real_ip_from 46.226.161.151;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1803,7 +1805,6 @@ set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
 set_real_ip_from 94.102.51.15;
-set_real_ip_from 94.140.115.63;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.16.112.22;
@@ -1813,7 +1814,6 @@ set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.37;
 set_real_ip_from 94.177.106.46;
 set_real_ip_from 94.177.106.55;
-set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
