--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -665,6 +665,7 @@ allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
+allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:4462::2;
 allow 2a12:5940:52c2::2;
