--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,11 +1,9 @@
 allow 102.130.113.9;
 allow 102.130.127.117;
-allow 103.106.3.94;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -132,7 +130,6 @@ allow 144.172.118.4;
 allow 144.172.118.41;
 allow 144.172.118.57;
 allow 144.172.73.11;
-allow 144.172.73.13;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
@@ -166,6 +163,7 @@ allow 163.172.213.212;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 165.73.242.163;
+allow 166.70.207.2;
 allow 167.71.6.109;
 allow 167.99.208.41;
 allow 168.100.9.100;
@@ -234,7 +232,6 @@ allow 185.100.85.22;
 allow 185.100.85.23;
 allow 185.100.85.24;
 allow 185.100.85.25;
-allow 185.100.86.128;
 allow 185.100.87.136;
 allow 185.100.87.139;
 allow 185.100.87.174;
@@ -633,6 +630,7 @@ allow 193.189.100.202;
 allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
+allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.182;
 allow 193.218.118.91;
@@ -1487,6 +1485,7 @@ allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
+allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
@@ -1509,12 +1508,10 @@ allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
-allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 34.202.50.8;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1616,6 +1613,7 @@ allow 5.196.95.34;
 allow 5.252.224.53;
 allow 5.255.100.126;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1641,6 +1639,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.205.129.6;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
