--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -657,6 +657,7 @@ allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
+allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
@@ -679,5 +680,4 @@ allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
-allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
