--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -657,6 +657,7 @@ set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
+set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:8a40:f313::29;
@@ -679,5 +680,4 @@ set_real_ip_from 2a12:5940:d0e2::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
-set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
